app/src/app.scss
html {
  overflow-y: hidden;
}

@media
only screen and (-webkit-min-device-pixel-ratio: 1.5),
only screen and (-o-min-device-pixel-ratio: 3/2),
only screen and (min--moz-device-pixel-ratio: 1.5),
only screen and (min-device-pixel-ratio: 1.5){

  html,
  body{
    width:100%;
    overflow-x:hidden;
  }

}

body {
  width: 95%;
  margin: 30px auto;
  padding: 0px 20px;
}

#login-grid {
  width: 95%;
  margin: 0px auto;
}

@media only screen and (max-width: 767px) {
  #thread-grid {
    .comment > .content {
      min-width: 200px !important;
      width: 40%;
    }

    .item {
      margin: 0px !important;;
    }

    .item>.image {
      display: none !important;
    }

    .content {
      padding: 0px !important;
    }
  }
}


@media only screen and (min-width: 767px) {
  body {
    width: 60%;
    margin: 30px auto;
  }

  #login-grid {
    width: 60%;
    margin: 0px auto;
  }
}

textarea {
  margin-bottom: 15px !important;
}

.reply {
  width: 100% !important;
}

#thread-header {
  width: 98% !important;
}

#feed {
  width: 100% !important;

  .content {
    width: 50%;
  }

  .text.extra {
    text-overflow: ellipsis;
    max-width: unset !important;
    white-space: nowrap;
    overflow: hidden;
  }
}

#header {
  margin-bottom: 50px;
}

#login {
  margin: 0px auto;
  display: block;
}



.menu {
  margin-bottom: 20px !important;
}

.ui.feed > {
  .event {
    cursor: pointer;
    padding: 5px !important;

    img {
      opacity: 0.8;
      margin-top: 12px;
      display: inline;
    }

    .loader {
      margin-top: 12px;
      display: inline;
      left: -20px;
      top: -21px;
    }

    .date {
      display: inline !important;
    }
  }
}

